# data-playground

./: .dockerignore  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  docker-compose.ray-jobs.yml  docker-compose.ray.yml  docker-compose.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
deploy/: README.md  verify-pod-substrate.sh
docs/: API.md  BACKUP_RESTORE.md  BENCHMARK.md  BROWSER_SUPPORT.md  CATALOG.md  CI.md  EXECUTION.md  MCP.md  OBSERVABILITY.md  PLUGINS.md  PLUGIN_ONBOARDING.md  PROJECT_ACCEPTANCE_AND_ROADMAP.md  RAY.md  RAY_JOBS.md  SUPPORT.md  TESTING.md  TUTORIAL.md  UPGRADING.md  UX_ACCEPTANCE.md  VERSIONED_DATA_AND_DURABLE_EXECUTION.md
examples/plugins/dp_descriptor_contract/: __init__.py  descriptor.json  pyproject.toml
examples/plugins/dp_external_wait_fixture/: __init__.py  pyproject.toml
examples/plugins/dp_file_catalog_provider/: __init__.py  pyproject.toml
examples/plugins/dp_run_log/: __init__.py  dataplay.toml  pyproject.toml
examples/plugins/dp_sidecar_fixture/: __init__.py  dataplay.toml  pyproject.toml
kernel/: README.md  hatch_build.py  pyproject.toml
kernel/bench/: out_of_core.py
kernel/hub/: __init__.py  agent.py  agent_policy.py  api_errors.py  auth.py  auth_admission.py  backends.py  bounded_fanout.py  bounded_fanout_tasks.py  canvas_copy.py  catalog_provider.py  catalog_provider_conformance.py  checkpoint_conformance.py  cli.py  compiler.py  compound_datasets.py  compound_fixture.py  compound_fixture_definition.py  db.py  deps.py  destinations.py  distribution_report_insights.py  distribution_report_tasks.py  distribution_reports.py  durable_tasks.py  estimate.py  execution_manifest.py  external_wait.py  external_wait_conformance.py  external_wait_tasks.py  grain.py  graph.py  graph_ops.py  handoff.py  identity_projection.py  ir.py  job_artifacts.py  kernel.py  kernel_backend.py  kernel_deps.py  (+66 more)
kernel/hub/contracts/: __init__.py  openapi.json  openapi.py
kernel/hub/executors/: engine.py  preview.py  profile.py  schema.py
kernel/hub/migrations/: env.py
kernel/hub/migrations/versions/: 0001_baseline.py  0001_schema_baseline.py  0002_managed_local_file_revisions.py  0002_run_records.py  0003_repair_historical_metadata.py  0003_sharing.py  0004_canvas_versions.py  0004_local_run_input_admissions.py  0005_profile_output_ports.py  0006_typed_local_writes.py  0007_workspace_provider_bindings.py  0008_managed_local_lance_writes.py  0009_catalog_relationships.py  0009_durable_local_write_tasks.py  0010_durable_external_waits.py  0010_user_is_admin.py  0011_external_wait_publication.py  0011_kernels.py  0012_linear_checkpoint_admission.py  0012_run_records_per_node.py  0013_linear_checkpoint_commit.py  0013_schema_contracts.py  0014_checkpoint_mat_identity.py  0014_linear_checkpoint_materialization_identity.py  0014_user_token_epoch.py  0015_bounded_fanout_plan.py  0015_share_role_check.py  0015_task_inbox_items.py  0016_bounded_fanout_plan.py  0016_run_state_owner.py  0017_catalog_org.py  0017_linear_checkpoint_inbox.py  0018_bounded_fanout_write.py  0018_run_result_links.py  0019_exact_local_inputs.py  0019_object_attempts.py  0020_backend_jobs.py  0020_execution_manifests.py  0020_object_attempt_lifecycle.py  0021_local_result_artifacts.py  (+36 more)
kernel/hub/plugins/: __init__.py  adapters.py  capabilities.py  catalog.py  default_catalog.py  importer.py  processors.py  runner.py
kernel/hub/routers/: catalog.py  compound_datasets.py  dataset_views.py  distribution_reports.py  inspection_windows.py  keyed_upsert.py  merge_columns.py  restore_revision.py  runs.py  temporal_evidence.py  temporal_resample_tasks.py  workspace.py
kernel/hub/tests/: conftest.py  merge_columns_fixture_manifest.json  task_manifest_helpers.py  test_admitted_input_manifest_transport.py  test_agent_data_policy.py  test_api_contract.py  test_auth_admission.py  test_backend_recovery_fences.py  test_backend_sink_cleanup.py  test_backend_source_pins.py  test_backup_restore_drill.py  test_body_limit.py  test_bounded_fanout_plan.py  test_bounded_fanout_write_tasks.py  test_canvas_copy.py  test_canvas_roles.py  test_catalog_folders.py  test_catalog_provider.py  test_catalog_rename_batch.py  test_catalog_scale.py  test_checkpoint_conformance.py  test_ci_workflow_policy.py  test_compound_datasets.py  test_compound_fixture_api.py  test_creds.py  test_dataset_revisions.py  test_dataset_views.py  test_deployment_transport.py  test_distribution_reports.py  test_docs_consistency.py  test_durable_external_wait_tasks.py  test_durable_local_write_tasks.py  test_execution_manifest_inspection.py  test_execution_manifests.py  test_external_wait.py  test_field_metadata.py  test_graph_ops.py  test_graph_validation.py  test_http_filesystem_policy.py  test_identifier_hardening.py  (+72 more)
kernel/kernel/: __init__.py  agent.py  auth.py  backends.py  cli.py  compiler.py  db.py  deps.py  destinations.py  grain.py  graph.py  main.py  metadb.py  models.py  nodespecs.py  paths.py  placement.py  planner.py  pool_runner.py  relationships.py  run_controller.py  sandbox.py  sdk.py  section.py  security.py  settings.py  storage.py  subprocess_runner.py  subrun.py
kernel/kernel/executors/: engine.py  preview.py  profile.py  schema.py
kernel/kernel/migrations/: env.py
kernel/kernel/migrations/versions/: 0005_user_password.py  0006_run_states.py  0007_catalog_entries.py  0008_result_cache.py  0010_user_is_admin.py
kernel/kernel/plugins/: __init__.py  adapters.py  base.py  capabilities.py  catalog.py  importer.py  processors.py  runner.py
kernel/kernel/routers/: catalog.py  runs.py  workspace.py
kernel/kernel/tests/: conftest.py  test_kernel.py
scripts/: build_ux_fixtures.py  check_release_versions.py  check_wheel_has_spa.py  perf_envelope.py  preflight.sh  ray-jobs-acceptance.sh  release_smoke.py  upgrade_drill.py  ux_release_gate.py  verify_versioned_object_backup.sh
web/: index.html  (+6 more)
(+291 files in other folders)
