[project]
name = "data-playground"
version = "0.1.0"
description = "An open-source, node-based canvas for data — like ComfyUI, but for typed columnar dataflow. Works offline on real Parquet/CSV/JSON/Arrow/Lance, out-of-core."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1",
    "pyarrow>=17",
    "polars>=1.9",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
lance = ["pylance>=0.19"]
# provider-agnostic LLM agent: Pydantic AI runs the tool-use loop in-process (no CLI, no proxy);
# LiteLLM stays for provider key-detection + model-string parsing. Native providers cover the rest.
agent = [
    "pydantic-ai-slim[openai,anthropic,google,groq,mistral,cohere,bedrock]>=2.5",
    "litellm>=1.50",
]
postgres = ["psycopg[binary]>=3.1"]  # metadata DB on Postgres for deployment (dev uses bundled SQLite)
dev = ["pytest>=8.0", "httpx>=0.27", "moto[s3,server]>=5.0", "boto3>=1.34", "data-playground[agent]"]

[project.scripts]
dataplay = "kernel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

[tool.hatch.build.targets.wheel.force-include]
"../web/dist" = "kernel/_web"

[tool.pytest.ini_options]
testpaths = ["kernel/tests"]
