[project]
name = "data-playground"
version = "0.1.0"
description = "An open-source, node-based canvas for data — like ComfyUI, but for typed columnar dataflow. Works offline on real Parquet/CSV/JSON/Arrow/Lance, out-of-core."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [{ name = "Data Playground contributors" }]
keywords = ["data", "dataflow", "duckdb", "arrow", "etl", "node-based", "canvas", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1",
    "pyarrow>=17",
    "polars>=1.9",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
lance = ["pylance>=0.19"]
# provider-agnostic LLM agent: Pydantic AI runs the tool-use loop in-process (no CLI, no proxy);
# LiteLLM stays for provider key-detection + model-string parsing. Native providers cover the rest.
agent = [
    "pydantic-ai-slim[openai,anthropic,google,groq,mistral,cohere,bedrock]>=2.5",
    "litellm>=1.50",
]
postgres = ["psycopg[binary]>=3.1"]  # metadata DB on Postgres for deployment (dev uses bundled SQLite)
pod = ["kubernetes>=27"]  # cross-host kernel substrate: a Pod + Service per canvas (DP_KERNEL_SPAWNER=pod)
hf = ["datasets>=2.0"]  # the examples/plugins/dp_hf_datasets reference adapter (hf:// Hugging Face datasets)
iceberg = ["pyiceberg>=0.6"]  # the examples/plugins/dp_iceberg reference adapter (iceberg:// Apache Iceberg)
dev = ["pytest>=8.0", "httpx>=0.27", "moto[s3,server]>=5.0", "boto3>=1.34", "data-playground[agent]", "data-playground[lance]"]

[project.urls]
Homepage = "https://github.com/pengw0048/data-playground"
Repository = "https://github.com/pengw0048/data-playground"
Issues = "https://github.com/pengw0048/data-playground/issues"

[project.scripts]
dataplay = "hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]

[tool.hatch.build.targets.wheel.force-include]
"../web/dist" = "hub/_web"

[tool.pytest.ini_options]
testpaths = ["hub/tests"]
# Surface OUR deprecations as errors so they can't rot silently; ignore known third-party ones we
# can't fix (pydantic_graph's event-loop deprecation surfaced by the agent's Pydantic AI loop).
filterwarnings = [
    "error::DeprecationWarning:hub.*",
    "ignore:There is no current event loop:DeprecationWarning",
]
