[project]
name = "data-playground"
version = "0.1.0"
description = "An open-source, node-based canvas for data — like ComfyUI, but for typed columnar dataflow. Works offline on real Parquet/CSV/JSON/Arrow/Lance, out-of-core."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
authors = [{ name = "Data Playground contributors" }]
keywords = ["data", "dataflow", "duckdb", "arrow", "etl", "node-based", "canvas", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Exact: hub.sqlpolicy audits DuckDB's JSON AST/function catalog contract for this version.
    "duckdb==1.5.4",
    "pyarrow>=17",
    "polars>=1.9",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "filelock>=3.16",
    "boto3>=1.34",
]

[project.optional-dependencies]
lance = ["pylance>=0.19"]
# provider-agnostic LLM agent: Pydantic AI runs the tool-use loop in-process (no CLI, no proxy);
# LiteLLM stays for provider key-detection + model-string parsing. Native providers cover the rest.
agent = [
    "pydantic-ai-slim[openai,anthropic,google,groq,mistral,cohere,bedrock]>=2.5",
    "litellm>=1.50",
]
postgres = ["psycopg[binary]>=3.1"]  # metadata DB on Postgres for deployment (dev uses bundled SQLite)
pod = ["kubernetes>=27"]  # cross-host kernel substrate: a Pod + Service per canvas (DP_KERNEL_SPAWNER=pod)
hf = ["datasets>=2.0"]  # the examples/plugins/dp_hf_datasets reference adapter (hf:// Hugging Face datasets)
iceberg = ["pyiceberg>=0.6"]  # the examples/plugins/dp_iceberg reference adapter (iceberg:// Apache Iceberg)
semantic = ["sentence-transformers>=2.2"]  # the examples/plugins/dp_semantic_catalog embedder (semantic/hybrid catalog search)
# ``default`` is Ray's supported dashboard/agent dependency contract. KubeRay v1.6 probes the agent's
# /api/healthz endpoint on every pod; it also supplies the official Jobs SDK. ``ray[data]`` alone omits
# the dashboard HTTP server used by both contracts.
ray = ["ray[data,default]==2.56.0"]  # exact: dp_ray validates this private hash-shuffle ABI on every node
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "moto[s3,server]>=5.0",
    "data-playground[agent]",
    "data-playground[lance]",
    # QA-01: Python lint + static-type baseline (see [tool.ruff] / [tool.basedpyright] below).
    "ruff>=0.11",
    "basedpyright>=1.28",
]

[project.urls]
Homepage = "https://github.com/pengw0048/data-playground"
Repository = "https://github.com/pengw0048/data-playground"
Issues = "https://github.com/pengw0048/data-playground/issues"

[project.scripts]
dataplay = "hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hub"]

# ensure ../web/dist exists before the build so a backend-only / clean-clone build (uv run pytest,
# no `npm run build`) never aborts on the force-include below — see hatch_build.py (OPS-07).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
"../web/dist" = "hub/_web"

[tool.pytest.ini_options]
testpaths = ["hub/tests"]
# Surface OUR deprecations as errors so they can't rot silently; ignore known third-party ones we
# can't fix (pydantic_graph's event-loop deprecation surfaced by the agent's Pydantic AI loop).
filterwarnings = [
    "error::DeprecationWarning:hub.*",
    "ignore:There is no current event loop:DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Python quality baseline (issue #111 / QA-01)
# Local: `make lint`  (= ruff on kernel/ + examples/plugins/, then basedpyright on hub/)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
src = ["hub"]
# Cover the packaged tree; plugins are linted via an extra path in `make lint` / CI
# (`uv run ruff check --config pyproject.toml . ../examples/plugins`) so this ignore set applies there too.

[tool.ruff.lint]
# Correctness-oriented starter set (Ruff's recommended default: pycodestyle errors + pyflakes).
# No isort / format / pedantic flake8 plugins — those are reformatting churn for a later ratchet.
select = ["E4", "E7", "E9", "F"]
ignore = [
    # Stylistic / density choices already common in tests and compact helpers — not correctness.
    "E401",  # multiple imports on one line
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E731",  # lambda assigned to a name (fine as a sentinel in tests)
    "E741",  # ambiguous variable name (l/O/I) — noisy without buying safety here
]

[tool.basedpyright]
# Why basedpyright (not mypy): fine-grained `report*` dials let us commit a clean, lenient baseline
# TODAY and ratchet one diagnostic at a time without littering `# type: ignore`. It still catches
# undefined names and declared-type assignment errors under this config (see issue #111 AC4).
include = ["hub"]
exclude = ["hub/tests", "**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Third-party / optional extras (ray, lance, pyiceberg, …) are not always installed in the
# `dev` extra — don't fail the gate on missing stubs or import resolution for those.
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
# Deferred diagnostics (explicit per-rule, not a blanket ignore): present on the tree today and
# too large for this PR. Turn each back to "error" in a follow-up once the call sites are ready.
reportArgumentType = "none"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportReturnType = "none"
reportPrivateImportUsage = "none"
reportOptionalSubscript = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportRedeclaration = "none"
reportOptionalIterable = "none"
reportOptionalCall = "none"
reportOperatorIssue = "none"
