[project]
name = "dp-external-wait-fixture"
version = "0.1.0"
description = "Deterministic Data Playground external-wait conformance fixture"
requires-python = ">=3.11"
dependencies = ["data-playground>=0.1.0"]

[project.entry-points."dataplay.plugins"]
dp-external-wait-fixture = "dp_external_wait_fixture:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "dp_external_wait_fixture/__init__.py"
