[project]
name = "dp-file-catalog-provider"
version = "0.1.0"
description = "Data Playground reference read-only file catalog provider"
requires-python = ">=3.11"
dependencies = ["data-playground>=0.1.0"]

[project.entry-points."dataplay.catalog_providers"]
dp-file-catalog = "dp_file_catalog_provider:provider"

[project.entry-points."dataplay.plugins"]
dp-file-catalog-adapter = "dp_file_catalog_provider:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "dp_file_catalog_provider/__init__.py"
