[project]
name = "dp-run-log"
version = "0.1.0"
description = "Data Playground reference telemetry-log plugin"
requires-python = ">=3.11"
dependencies = ["data-playground>=0.1.0"]

[project.entry-points."dataplay.plugins"]
dp-run-log = "dp_run_log:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "dp_run_log/__init__.py"
