[project]
name = "dp-sidecar-fixture"
version = "0.1.0"
description = "Neutral exact-sidecar fixture for Data Playground conformance journeys"
requires-python = ">=3.11"
dependencies = ["data-playground>=0.1.0"]

[project.entry-points."dataplay.plugins"]
dp-sidecar-fixture = "dp_sidecar_fixture:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "dp_sidecar_fixture/__init__.py"
